--- a/src/components/lavalamp.scss
+++ b/src/components/lavalamp.scss
@@ -1,11 +1,10 @@
-$lavacolor: lime;
+$lavacolor: #f8eec2;
 $lavablur: 3px;
-$glasscolor: white;
+$glasscolor: rgba(228, 2, 2, 0.308);
 /*various blob speeds*/
-$fast: 9s;
-$med: 12s;
-$slow: 15s;
-
+$fast: 30s;
+$med: 35s;
+$slow: 40s;
 
 // html,
 // body {
@@ -14,98 +13,94 @@ $slow: 15s;
 //   display: flex;
 // }
 .container {
-  margin: auto;
-  position: absolute;
-  top: 10vh;
-  right: 10vw;
-  //transform: scale(1.5);
+  // margin: auto;
+  // position: fixed;
+  // width: 100%;
+  // height: 100%;
+  // background: $glasscolor;
+  // filter: contrast(10);
 }
-.top .wrapper {
-  width: 100px;
-  height: 100px;
-  position: relative;
-  margin-left: 150px;
-}
-.upperBase .wrapper {
-  width: 143px;
-  height: 100px;
-  position: relative;
-  margin-left: 128px;
-  transform: rotateY(180deg);
-  top: 38px;
-}
-.lowerBase .wrapper {
-  width: 130px;
-  height: 50px;
-  position: relative;
-  margin-left: 135px;
-  transform: rotateY(180deg);
-  top: 17px;
-}
-@mixin trap {
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  content: "";
-  position: absolute;
-}
-.lowerBase .base {
-  @include trap;
-  background: linear-gradient(
-    to right,
-    #636363 0%,
-    #969696 24%,
-    #969696 24%,
-    #adadad 50%,
-    #5b5b5b 100%
-  );
-  transform: perspective(2px) rotateX(1deg);
-}
-.upperBase .base {
-  @include trap;
-  background: linear-gradient(
-    to right,
-    #6c6c6c 0%,
-    #a5a5a5 24%,
-    #a5a5a5 24%,
-    #bebebe 50%,
-    #636363 100%
-  );
-  transform: perspective(65px) rotateX(-25deg);
-}
-.cap {
-  @include trap;
-  background: linear-gradient(
-    to right,
-    #9f9f9f 0%,
-    #d8d8d8 24%,
-    #d8d8d8 24%,
-    #f1f1f1 50%,
-    #969696 100%
-  );
-  transform: perspective(4px) rotateX(1deg);
-}
-.mid .wrapper {
-  width: 158px;
-  height: 200px;
-  position: relative;
-  left: 121px;
-  top: -12px;
-}
-.glass {
-  @include trap;
-  background: darken($glasscolor, 20%);
-  transform: perspective(7px) rotateX(1deg);
-  filter: contrast(18);
-  overflow: hidden;
-}
+// .top .wrapper {
+//   width: 100px;
+//   height: 100px;
+//   position: relative;
+//   margin-left: 150px;
+// }
+// .upperBase .wrapper {
+//   width: 143px;
+//   height: 100px;
+//   position: relative;
+//   margin-left: 128px;
+//   transform: rotateY(180deg);
+//   top: 38px;
+// }
+// .lowerBase .wrapper {
+//   width: 130px;
+//   height: 50px;
+//   position: relative;
+//   margin-left: 135px;
+//   transform: rotateY(180deg);
+//   top: 17px;
+// }
+
+// .lowerBase .base {
+//   @include trap;
+//   background: linear-gradient(
+//     to right,
+//     #636363 0%,
+//     #969696 24%,
+//     #969696 24%,
+//     #adadad 50%,
+//     #5b5b5b 100%
+//   );
+//   transform: perspective(2px) rotateX(1deg);
+// }
+// .upperBase .base {
+//   @include trap;
+//   background: linear-gradient(
+//     to right,
+//     #6c6c6c 0%,
+//     #a5a5a5 24%,
+//     #a5a5a5 24%,
+//     #bebebe 50%,
+//     #636363 100%
+//   );
+//   transform: perspective(65px) rotateX(-25deg);
+// }
+// .cap {
+//   @include trap;
+//   background: linear-gradient(
+//     to right,
+//     #9f9f9f 0%,
+//     #d8d8d8 24%,
+//     #d8d8d8 24%,
+//     #f1f1f1 50%,
+//     #969696 100%
+//   );
+//   transform: perspective(4px) rotateX(1deg);
+// }
+// .mid .wrapper {
+//   width: 158px;
+//   height: 200px;
+//   position: relative;
+//   left: 121px;
+//   top: -12px;
+// }
+// .glass {
+//   @include trap;
+//   width: 100%;
+//   height: 100%;
+//   background: darken($glasscolor, 20%);
+//   transform: perspective(7px) rotateX(1deg);
+//   filter: contrast(18);
+//   overflow: hidden;
+// }
 
 .goop {
   background: $lavacolor;
   width: 100%;
   height: 50px;
-  position: absolute;
+  position: fixed;
   border-radius: 50%;
   filter: blur($lavablur);
 }
@@ -116,8 +111,8 @@ $slow: 15s;
   bottom: -25px;
 }
 .blob {
-  border-radius: 50%;
-  position: absolute;
+  border-radius: 60%;
+  position: fixed;
   background: $lavacolor;
   filter: blur($lavablur);
 }
@@ -126,54 +121,95 @@ $slow: 15s;
   animation: $anim $dur infinite ease-in;
 }
 .blob:nth-of-type(1) {
-  height: 80px;
-  width: 80px;
+  height: 20%;
+  width: 20%;
   @include blobanimator(from-bottom, $fast);
+  bottom: -180px;
 }
 .blob:nth-of-type(2) {
-  width: 80px;
-  height: 80px;
-  left: 50px;
+  width: 20%;
+  height: 20%;
+  left: 5vw;
   @include blobanimator(from-bottom, $med);
-  animation-delay: 1s;
-  bottom: -40px;
+  animation-delay: 5s;
+  bottom: -180px;
 }
 .blob:nth-of-type(3) {
-  height: 70px;
-  width: 60px;
-  right: 30px;
+  height: 25%;
+  width: 20%;
+  right: 12vw;
   @include blobanimator(from-top, $slow);
-  top: -80px;
+  animation-delay: 1s;
+  top: -180px;
 }
 .blob:nth-of-type(4) {
-  height: 40px;
-  width: 40px;
-  left: 50px;
+  height: 30%;
+  width: 26%;
+  left: 20vw;
   @include blobanimator(from-top, $med);
-  top: -80px;
+  top: -180px;
   animation-delay: 3s;
 }
 .blob:nth-of-type(5) {
-  height: 90px;
-  width: 90px;
-  left: -15px;
+  height: 22%;
+  width: 18%;
+  left: -15vw;
   @include blobanimator(from-bottom, $slow);
-  bottom: -80px;
-  animation-delay: 3s;
+  bottom: -180px;
+  animation-delay: 8s;
 }
+
+.blob:nth-of-type(6) {
+  height: 29%;
+  width: 20%;
+  @include blobanimator(from-bottom, $fast);
+  bottom: -180px;
+}
+.blob:nth-of-type(7) {
+  width: 20%;
+  height: 25%;
+  left: 20vw;
+  @include blobanimator(from-bottom, $med);
+  animation-delay: 1.5s;
+  bottom: -180px;
+}
+.blob:nth-of-type(8) {
+  height: 35%;
+  width: 20%;
+  right: 20vw;
+  @include blobanimator(from-top, $slow);
+  top: -180px;
+}
+.blob:nth-of-type(9) {
+  height: 26%;
+  width: 20%;
+  left: 18vw;
+  @include blobanimator(from-top, $med);
+  top: -180px;
+  animation-delay: 10s;
+}
+.blob:nth-of-type(10) {
+  height: 28%;
+  width: 24%;
+  left: -10vw;
+  @include blobanimator(from-bottom, $slow);
+  bottom: -180px;
+  animation-delay: 2s;
+}
+
 @keyframes from-bottom {
   0% {
-    bottom: -80px;
+    bottom: -180px;
   }
   100% {
-    bottom: 200px;
+    bottom: 100%;
   }
 }
 @keyframes from-top {
   0% {
-    top: -80px;
+    top: -180px;
   }
   100% {
-    top: 200px;
+    top: 100%;
   }
 }
