--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,8 +1,32 @@
-.navbar-container{
+.navbar-container {
   margin: 0;
   padding: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    background-color: white;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  background-color: #ffffff23;
+  position: fixed;
+  top: 0;
+  font: #ffffff;
+  text-decoration: none;
+}
+
+/* A link that has not been visited */
+a:link {
+  color: white;
+}
+
+/* A link that has been visited */
+a:visited {
+  color: pink;
+}
+
+/* A link that is hovered on */
+a:hover {
+  color: orange;
+}
+
+/* A link that is selected */
+a:active {
+  color: pink;
 }
