--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,15 +1,29 @@
 .navbar-container {
   margin: 0;
-  padding: 0;
+  padding: 15;
   width: 100%;
+  font-size: 30px;
   display: flex;
   justify-content: space-around;
   background-color: #ffffff23;
   position: fixed;
   top: 0;
   font: #ffffff;
+  z-index: 50;
+}
+
+.navbar-container > a {
   text-decoration: none;
 }
+
+/* .navbar-container > a:hover {
+  text-decoration: underline;
+} */
+
+/* .navbar a {
+  display: flex;
+  justify-content: space-around;
+} */
 
 /* A link that has not been visited */
 a:link {
