--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -14,10 +14,12 @@
 #2738F6 
 #051F64 
 #ACB0A4 
-#7E847B  */
+#7E847B  
+#f80f92
+#835eff*/
 
 body {
-  background-image: linear-gradient(#f8eec2 20%, #ffc4fd);
+  background-image: linear-gradient(-206deg, #835eff 0%, #ff008d 100%);
   font: white;
   margin: 0;
   padding: 0;
