changed all styling to scss

--- a/src/components/lavalamp.scss
+++ b/src/components/lavalamp.scss
@@ -1,6 +1,5 @@
-$lavacolor: #fb00ffbf;
-$lavablur: 3px;
-$glasscolor: rgba(228, 2, 2, 0.308);
+@import "../pages/index.scss";
+
 /*various blob speeds*/
 $fast: 30s;
 $med: 35s;
