--- a/src/components/about-me.scss
+++ b/src/components/about-me.scss
@@ -7,25 +7,28 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  border: green 4px solid;
   height: 100vh;
   width: 100vw;
   z-index: 2;
 }
 
-#about-me {
+.about-me-title {
   font-family: Psychedelia;
+  display: flex;
+  flex-direction: row;
+  width: 50%;
   margin: 0;
   padding: 0;
   font-size: 20vh;
   font-weight: 100;
-  display: inline;
   position: relative;
   letter-spacing: 5px;
   color: $primary;
   z-index: 2;
 }
 
-#about-me:after {
+.about-me-title:after {
   content: "about me";
   position: absolute;
   left: 10px;
@@ -34,9 +37,7 @@
 }
 
 .about-me-content {
-  position: relative;
   margin-top: -5vh;
-  text-align: right;
   z-index: 2;
   color: $dark;
   font-size: 1.1em;
