--- a/src/components/contact-me.scss
+++ b/src/components/contact-me.scss
@@ -1,13 +1,48 @@
 @import "../pages/index.scss";
 .contact-container {
-  width: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: green 4px solid;
+  height: 100vh;
+  width: 100vw;
+  z-index: 2;
+}
+
+.btn-social-icon {
   height: 100%;
+  width: 100%;
+}
+
+.contact-me-title {
+  font-family: Psychedelia;
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  font-size: 20vh;
+  font-weight: 100;
+  position: relative;
+  letter-spacing: 5px;
+  color: $primary;
+  z-index: 2;
 }
-.contact-info {
-  width: 20vw;
-  height: 20vh;
-  margin: 10vw;
+
+.contact-me-title:after {
+  content: "contact me";
+  position: absolute;
+  left: 10px;
+  top: 5px;
+  color: $lighttitle;
+}
+
+.contact-me-info {
+  z-index: 2;
+  color: $dark;
+  font-size: 1.1em;
+  letter-spacing: 1.5px;
 }
