--- a/src/components/technologies.scss
+++ b/src/components/technologies.scss
@@ -1,15 +1,19 @@
 @import "../pages/index.scss";
 
 .tech-icon-container {
-  width: 100%;
+  width: 100vw;
   height: 100%;
+  position: relative;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  z-index: 20;
 }
 .tech-icon {
+  position: relative;
   width: 5vw;
   height: 5vh;
   padding: 2vh;
   margin: 2vh;
+  z-index: 50;
 }
