--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -38,6 +38,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Hyatheus;
+  overflow-x: hidden;
 }
 h1 {
   display: block;
@@ -45,4 +46,8 @@ h1 {
   margin-block-end: 0;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
+}
+
+section {
+  display: block;
 }
