--- a/src/components/about-me.scss
+++ b/src/components/about-me.scss
@@ -10,14 +10,15 @@
   border: green 4px solid;
   height: 100vh;
   width: 100vw;
-  z-index: 2;
 }
 
 .about-me-title {
   font-family: Psychedelia;
   display: flex;
   flex-direction: row;
-  width: 50%;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
   margin: 0;
   padding: 0;
   font-size: 20vh;
@@ -25,12 +26,16 @@
   position: relative;
   letter-spacing: 5px;
   color: $primary;
-  z-index: 2;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  @include z-index(script);
 }
 
 .about-me-title:after {
   content: "about me";
   position: absolute;
+  width: 100%;
   left: 10px;
   top: 5px;
   color: $lighttitle;
@@ -38,8 +43,31 @@
 
 .about-me-content {
   margin-top: -5vh;
-  z-index: 2;
+  @include z-index(script);
   color: $dark;
   font-size: 1.1em;
   letter-spacing: 1.5px;
+}
+
+.about-me-content h2 {
+  color: $dark;
+  font-size: 1.1em;
+  letter-spacing: 1.5px;
+}
+
+.about-me-content p {
+  color: $dark;
+  font-size: 1.1em;
+  letter-spacing: 1.5px;
+}
+.about-me-picture {
+  background-image: url(../images/Mikayda.jpg);
+  background-repeat: no-repeat;
+  // background-size: auto;
+  //filter: sepia(50%);
+  // filter: invert(0.8);
+  width: 100%;
+  height: 100%;
+  border: yellow 5px solid;
+  border-radius: 20px;
 }
