--- a/src/components/contact-me.scss
+++ b/src/components/contact-me.scss
@@ -6,10 +6,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: green 4px solid;
+
   height: 100vh;
   width: 100vw;
-  z-index: 2;
+  @include z-index(script);
 }
 
 .btn-social-icon {
@@ -21,7 +21,6 @@
   font-family: Psychedelia;
   display: flex;
   flex-direction: row;
-  width: 100%;
   margin: 0;
   padding: 0;
   font-size: 20vh;
@@ -29,19 +28,23 @@
   position: relative;
   letter-spacing: 5px;
   color: $primary;
-  z-index: 2;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  @include z-index(script);
 }
 
 .contact-me-title:after {
   content: "contact me";
   position: absolute;
+  width: 100%;
   left: 10px;
   top: 5px;
   color: $lighttitle;
 }
 
 .contact-me-info {
-  z-index: 2;
+  @include z-index(script);
   color: $dark;
   font-size: 1.1em;
   letter-spacing: 1.5px;
