--- a/src/components/credits.scss
+++ b/src/components/credits.scss
@@ -7,17 +7,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border: green 4px solid;
   height: 100vh;
   width: 100vw;
-  z-index: 2;
+  @include z-index(script);
 }
 
 .credits-title {
   font-family: Psychedelia;
   display: flex;
   flex-direction: row;
-  width: 100%;
   margin: 0;
   padding: 0;
   font-size: 20vh;
@@ -25,12 +23,16 @@
   position: relative;
   letter-spacing: 5px;
   color: $primary;
-  z-index: 2;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  @include z-index(script);
 }
 
 .credits-title:after {
   content: "credits";
   position: absolute;
+  width: 100%;
   left: 10px;
   top: 5px;
   color: $lighttitle;
@@ -38,10 +40,10 @@
 
 .credits-list {
   list-style: disc;
+  @include z-index(script);
 }
 
 .credit-item {
-  z-index: 2;
   color: $dark;
   font-size: 1.1em;
   letter-spacing: 1.5px;
