--- a/src/components/projects.scss
+++ b/src/components/projects.scss
@@ -11,14 +11,14 @@
   border: green 4px solid;
   height: 100vh;
   width: 100vw;
-  z-index: 2;
+
+  @include z-index(script);
 }
 
 .projects-title {
   font-family: Psychedelia;
   display: flex;
   flex-direction: row;
-  width: 100%;
   margin: 0;
   padding: 0;
   font-size: 20vh;
@@ -26,12 +26,16 @@
   position: relative;
   letter-spacing: 5px;
   color: $primary;
-  z-index: 2;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  @include z-index(script);
 }
 
 .projects-title:after {
   content: "projects";
   position: absolute;
+  width: 100%;
   left: 10px;
   top: 5px;
   color: $lighttitle;
@@ -42,7 +46,7 @@
 }
 
 .projects-item {
-  z-index: 2;
+  @include z-index(script);
   color: $dark;
   font-size: 1.1em;
   letter-spacing: 1.5px;
