--- a/src/components/technologies.scss
+++ b/src/components/technologies.scss
@@ -1,13 +1,17 @@
 @import "../pages/index.scss";
 
 .tech-icon-container {
-  width: 100vw;
-  height: 100%;
   position: relative;
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  z-index: 20;
+  justify-content: space-around;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  @include z-index(script);
 }
 .tech-icon {
   position: relative;
@@ -15,5 +19,41 @@
   height: 5vh;
   padding: 2vh;
   margin: 2vh;
-  z-index: 50;
+  @include z-index(script);
+  color: $dark;
+  font-size: 1.1em;
+  letter-spacing: 1.5px;
+}
+
+.tech-title {
+  font-family: Psychedelia;
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+  padding: 0;
+  font-size: 20vh;
+  font-weight: 100;
+  position: relative;
+  letter-spacing: 5px;
+  color: $primary;
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  @include z-index(script);
+}
+
+.tech-title:after {
+  content: "technologies";
+  position: absolute;
+  width: 100%;
+  left: 10px;
+  top: 5px;
+  color: $lighttitle;
+}
+
+.contact-me-info {
+  @include z-index(script);
+  color: $dark;
+  font-size: 1.1em;
+  letter-spacing: 1.5px;
 }
