--- a/src/components/title.scss
+++ b/src/components/title.scss
@@ -9,7 +9,7 @@
   align-items: center;
   height: 100vh;
   width: 100vw;
-  z-index: 2;
+  @include z-index(script);
 }
 
 .title {
@@ -22,7 +22,7 @@
   position: relative;
   letter-spacing: 5px;
   color: $primary;
-  z-index: 2;
+  @include z-index(script);
 }
 
 .title:after {
@@ -37,7 +37,10 @@
   position: relative;
   margin-top: -5vh;
   text-align: right;
-  z-index: 2;
+}
+
+.title-script h2 {
+  @include z-index(script);
   color: $dark;
   font-size: 1.1em;
   letter-spacing: 1.5px;
