added style to about me page

--- a/src/components/about-me.scss
+++ b/src/components/about-me.scss
@@ -4,11 +4,13 @@
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  text-align: left;
   align-items: center;
   border: green 4px solid;
-  height: 100vh;
+  height: auto;
   width: 100vw;
 }
 
@@ -20,6 +22,7 @@
   text-align: center;
   justify-content: center;
   margin: 0;
+  margin-top: 10vh;
   padding: 0;
   font-size: 20vh;
   font-weight: 100;
@@ -41,8 +44,14 @@
   color: $lighttitle;
 }
 
+.about-me-content-container {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
 .about-me-content {
-  margin-top: -5vh;
+  margin: 2vh;
   @include z-index(script);
   color: $dark;
   font-size: 1.1em;
@@ -51,7 +60,7 @@
 
 .about-me-content h2 {
   color: $dark;
-  font-size: 1.1em;
+  font-size: 1.4em;
   letter-spacing: 1.5px;
 }
 
@@ -60,14 +69,34 @@
   font-size: 1.1em;
   letter-spacing: 1.5px;
 }
+
+.about-me-picture-container {
+  width: 40%;
+  height: 50vh;
+  z-index: 50;
+  // position: relative;
+  justify-self: flex-end;
+  margin: 2vh;
+}
 .about-me-picture {
   background-image: url(../images/Mikayda.jpg);
   background-repeat: no-repeat;
-  // background-size: auto;
+  // background-size: contain;
+  position: relative;
+  border: $lighttitle 1.3em solid;
+  border-radius: 3em;
+  // border-radius: 3em;
   //filter: sepia(50%);
-  // filter: invert(0.8);
-  width: 100%;
+  //filter: invert(0.8);
+  width: 90%;
   height: 100%;
-  border: yellow 5px solid;
-  border-radius: 20px;
+  @include z-index(script);
+}
+.general {
+}
+.goals {
+}
+.topics {
+}
+.resume {
 }
