--- a/src/components/contact-me.scss
+++ b/src/components/contact-me.scss
@@ -6,15 +6,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
   height: 100vh;
   width: 100vw;
   @include z-index(script);
 }
 
 .btn-social-icon {
-  height: 100%;
-  width: 100%;
+  height: 15vh;
+  width: auto;
 }
 
 .contact-me-title {
@@ -46,6 +45,22 @@
 .contact-me-info {
   @include z-index(script);
   color: $dark;
+  width: 15vw;
+  height: auto;
   font-size: 1.1em;
   letter-spacing: 1.5px;
+}
+
+.contact-list-container {
+  @include z-index(script);
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.icon {
+  width: 8vw;
+  height: auto;
 }
