--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -31,6 +31,7 @@ $light: #ebd4ad;
 $lighttitle: rgba(235, 212, 173, 0.886);
 $dark: #630c4f;
 $lavacolor: #fb00ffd7;
+$topics: #3f0040;
 $lavablur: 3px;
 $iconS: 32;
 $iconC: #630c4f;
