--- a/src/components/technologies.scss
+++ b/src/components/technologies.scss
@@ -4,38 +4,42 @@
   grid-template-columns: 1fr 1fr;
   height: 100vh;
   width: 100%;
-  margin-top: 10vh;
+  margin-top: 5vh;
 }
 .tech-icon-container {
   position: relative;
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
   height: 100%;
   width: 100%;
   @include z-index(script);
 }
+
+.tech-icon-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 100%;
+  width: 100%;
+}
 .tech-icon {
-  position: relative;
   width: 5vw;
   height: 5vh;
   padding: 2vh;
-  margin: 2vh;
+  margin: 0;
   @include z-index(script);
   color: $dark;
-  font-size: 1.1em;
-  letter-spacing: 1.5px;
 }
 
 .tech-title {
   font-family: Psychedelia;
   display: flex;
   flex-direction: row;
-  margin: 0;
+  margin-top: 10vh;
   padding: 0;
   font-size: 20vh;
   font-weight: 100;
@@ -63,13 +67,20 @@
   font-size: 1.1em;
   letter-spacing: 1.5px;
 }
-.resume-link-container {
-  width: 40%;
+
+.resume-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+.resume-pic-container {
+  width: 100%;
   height: 50vh;
+  display: flex;
+  justify-content: center;
   @include z-index(picframes);
   // position: relative;
-  justify-self: flex-end;
-  margin: 2vh;
 }
 .resume {
   background-image: url(../images/resumess.png);
@@ -81,7 +92,7 @@
   // border-radius: 3em;
   //filter: sepia(50%);
   //filter: invert(0.8);
-  width: 30vw;
+  width: 40%;
   height: 60vh;
   @include z-index(script);
 }
