changed some of the credits to reflect actual inspo

--- a/src/components/credits.scss
+++ b/src/components/credits.scss
@@ -30,7 +30,7 @@
 }
 
 .credits-title:after {
-  content: "credits";
+  content: "inspiration";
   position: absolute;
   width: 100%;
   left: 10px;
