--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -62,6 +62,8 @@ body {
   padding: 0;
   font-family: Hyatheus;
   overflow-x: hidden;
+  width: 100vw;
+  height: 100%;
 }
 h1 {
   display: block;
