--- a/src/components/lavalamp.scss
+++ b/src/components/lavalamp.scss
@@ -74,7 +74,7 @@ $slow: 40s;
 .blob:nth-of-type(4) {
   height: 30%;
   width: 26%;
-  left: 20vw;
+  left: 15vw;
   @include blobanimator(from-top, $med);
   top: -180px;
   animation-delay: 3s;
@@ -130,4 +130,17 @@ $slow: 40s;
 #svg {
   height: 0px;
   z-index: -11;
+}
+@media only screen and (max-width: 640px) {
+  .blob:nth-of-type(1),
+  .blob:nth-of-type(2),
+  .blob:nth-of-type(3),
+  .blob:nth-of-type(4),
+  .blob:nth-of-type(5),
+  .blob:nth-of-type(6),
+  .blob:nth-of-type(7),
+  .blob:nth-of-type(8) {
+    height: 15%;
+    width: 15%;
+  }
 }
