--- a/src/components/projects.scss
+++ b/src/components/projects.scss
@@ -21,7 +21,7 @@
   flex-direction: row;
   margin: 0;
   padding: 0;
-  font-size: 20vh;
+
   font-weight: 100;
   position: relative;
   letter-spacing: 5px;
@@ -50,4 +50,36 @@
   color: $dark;
   font-size: 1.1em;
   letter-spacing: 1.5px;
+}
+
+@media only screen and (max-width: 640px) {
+  .about-me-content-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    margin: 2vh 0;
+  }
+  .about-me-container {
+    margin: 10vh 2vw;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    height: auto;
+  }
+  .about-me-content h2 {
+    text-align: center;
+  }
+  .about-me-picture-container {
+    width: 80%;
+    height: auto;
+    @include z-index(picframes);
+
+    // position: relative;
+  }
+  .about-me-picture {
+    background-size: cover;
+    height: 30vh;
+    width: 90%;
+    border: $lighttitle 15px solid;
+  }
 }
