--- a/src/components/title.scss
+++ b/src/components/title.scss
@@ -42,6 +42,14 @@
 .title-script h2 {
   @include z-index(script);
   color: $dark;
-  font-size: 1.1em;
   letter-spacing: 1.5px;
+}
+
+@media only screen and (max-width: 640px) {
+  .title {
+    font-size: 10vh;
+  }
+  .title-script {
+    margin-top: 2vh;
+  }
 }
