--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -62,7 +62,7 @@ body {
   padding: 0;
   font-family: Hyatheus;
   overflow-x: hidden;
-  width: 100vw;
+  width: 100%;
   height: 100%;
 }
 h1 {
@@ -71,7 +71,11 @@ h1 {
   margin-block-end: 0;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
+  font-size: 20vh;
   @include z-index(script);
+  // @media only screen and (min-width: 640px) {
+  //   font-size: 14vh;
+  // }
 }
 h2 {
   display: block;
@@ -81,6 +85,7 @@ h2 {
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   font-weight: 100;
+  font-size: 1.1em;
 }
 
 section {
@@ -105,4 +110,16 @@ a:hover {
 /* A link that is selected */
 a:active {
   color: $light;
+}
+
+@media only screen and (max-width: 640px) {
+  body {
+    min-width: 100%;
+  }
+  h1 {
+    font-size: 8vh;
+  }
+  h2 {
+    font-size: 1.5vh;
+  }
 }
