--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -22,7 +22,7 @@
 #630c4f
 #f80f92
 #835eff
-#fb00ffbf
+#fb00ff
 */
 
 $primary: #f80f92;
@@ -31,6 +31,7 @@ $light: #ebd4ad;
 $lighttitle: rgba(235, 212, 173, 0.886);
 $dark: #630c4f;
 $lavacolor: #fb00ffd7;
+$medialava: #fb00fff0;
 $topics: #3f0040;
 $lavablur: 3px;
 $iconS: 32;
