--- a/src/components/technologies.scss
+++ b/src/components/technologies.scss
@@ -1,20 +1,20 @@
 @import "../pages/index.scss";
 .skills-container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   height: 100vh;
   width: 100%;
   margin-top: 5vh;
 }
 .tech-icon-container {
-  position: relative;
   margin: 0 auto;
   padding: 0;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+
   align-items: center;
-  height: 100%;
+  height: auto;
   width: 100%;
   @include z-index(script);
 }
@@ -93,4 +93,32 @@
   width: 40%;
   height: 60vh;
   @include z-index(script);
+}
+
+@media only screen and (max-width: 770px) {
+  .skills-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+    height: auto;
+  }
+  .resume-container {
+    width: 100%;
+    height: 80vh;
+  }
+  .tech-icon-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: auto;
+    @include z-index(script);
+  }
+  .resume {
+    width: 80%;
+    background-size: contain;
+    border: none;
+    border-radius: none;
+  }
 }
