--- a/src/components/technologies.scss
+++ b/src/components/technologies.scss
@@ -2,7 +2,7 @@
 .skills-container {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
+  // flex-wrap: wrap;
   height: 100vh;
   width: 100%;
   margin-top: 5vh;
@@ -15,7 +15,7 @@
 
   align-items: center;
   height: auto;
-  width: 100%;
+  width: 50%;
   @include z-index(script);
 }
 
@@ -71,6 +71,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  width: 50%;
 }
 .resume-pic-container {
   width: 100%;
@@ -95,30 +96,30 @@
   @include z-index(script);
 }
 
-@media only screen and (max-width: 770px) {
-  .skills-container {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    width: 100%;
-    height: auto;
-  }
-  .resume-container {
-    width: 100%;
-    height: 80vh;
-  }
-  .tech-icon-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    height: auto;
-    @include z-index(script);
-  }
-  .resume {
-    width: 80%;
-    background-size: contain;
-    border: none;
-    border-radius: none;
-  }
-}
+// @media only screen and (max-width: 770px) {
+//   .skills-container {
+//     display: flex;
+//     flex-direction: column;
+//     flex-wrap: wrap;
+//     width: 100%;
+//     height: auto;
+//   }
+//   .resume-container {
+//     width: 100%;
+//     height: 80vh;
+//   }
+//   .tech-icon-container {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     width: 100%;
+//     height: auto;
+//     @include z-index(script);
+//   }
+//   .resume {
+//     width: 80%;
+//     background-size: contain;
+//     border: none;
+//     border-radius: none;
+//   }
+// }
