--- a/src/components/title.scss
+++ b/src/components/title.scss
@@ -43,6 +43,7 @@
   @include z-index(script);
   color: $dark;
   letter-spacing: 1.5px;
+  font-size: 3.5vh;
 }
 
 @media only screen and (max-width: 770px) {
