--- a/src/components/title.scss
+++ b/src/components/title.scss
@@ -45,6 +45,9 @@
   letter-spacing: 1.5px;
   font-size: 3.5vh;
 }
+.vanilla {
+  color: $lighttitle;
+}
 
 @media only screen and (max-width: 770px) {
   .title {
