--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -30,6 +30,7 @@ $secondary: #835eff;
 $light: #ebd4ad;
 $lighttitle: rgba(235, 212, 173, 0.886);
 $dark: #630c4f;
+$accent: #ecafde;
 $lavacolor: #fb00ffd7;
 $medialava: #fb00fff0;
 $topics: #3f0040;
