--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -29,6 +29,8 @@ $primary: #f80f92;
 $secondary: #835eff;
 $light: #ebd4ad;
 $lighttitle: rgba(235, 212, 173, 0.886);
+$input: rgba(252, 239, 216, 0.886);
+
 $dark: #630c4f;
 $accent: #ecafde;
 $lavacolor: #fb00ffd7;
