add default fonts

--- a/src/components/about-me.scss
+++ b/src/components/about-me.scss
@@ -14,7 +14,7 @@
 }
 
 .about-me-title {
-  font-family: Psychedelia;
+  font-family: Psychedelia, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   display: flex;
   flex-direction: row;
   width: 100%;
