--- a/src/components/projects.scss
+++ b/src/components/projects.scss
@@ -16,7 +16,7 @@
 }
 
 .projects-title {
-  font-family: Psychedelia;
+  font-family: Psychedelia, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   display: flex;
   flex-direction: row;
   margin: 0;
