--- a/src/components/contact-me.scss
+++ b/src/components/contact-me.scss
@@ -17,7 +17,7 @@
 }
 
 .contact-me-title {
-  font-family: Psychedelia;
+  font-family: Psychedelia, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   display: flex;
   flex-direction: row;
   margin: 0;
