--- a/src/components/credits.scss
+++ b/src/components/credits.scss
@@ -13,7 +13,7 @@
 }
 
 .credits-title {
-  font-family: Psychedelia;
+  font-family: Psychedelia, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   display: flex;
   flex-direction: row;
   margin: 0;
