--- a/src/components/technologies.scss
+++ b/src/components/technologies.scss
@@ -34,7 +34,7 @@
 }
 
 .tech-title {
-  font-family: Psychedelia;
+  font-family: Psychedelia, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   display: flex;
   flex-direction: row;
   margin-top: 10vh;
