--- a/src/components/title.scss
+++ b/src/components/title.scss
@@ -13,7 +13,7 @@
 }
 
 .title {
-  font-family: Psychedelia;
+  font-family: Psychedelia, "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
   font-size: 29vh;
