--- a/src/components/about-me.scss
+++ b/src/components/about-me.scss
@@ -9,7 +9,7 @@
   justify-content: space-around;
   text-align: left;
   align-items: center;
-  height: 100vh;
+  height: auto;
   width: 100vw;
 }
 
@@ -53,14 +53,14 @@
 .about-me-content {
   @include z-index(script);
   color: $dark;
-  text-align: right;
+  text-align: left;
 }
 
 .about-me-content h2 {
   color: $light;
   font-size: 2em;
   letter-spacing: 1.5px;
-  text-align: right;
+  text-align: left;
   font-weight: bold;
 }
 
@@ -87,7 +87,7 @@
   border-radius: 3em;
   //filter: sepia(50%);
   //filter: invert(0.8);
-  width: 80%;
+  width: 100%;
   height: 100%;
   @include z-index(script);
 }
@@ -100,7 +100,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    margin: 2vh 0;
+    margin: 10px 0;
     order: 3;
   }
   .about-me-container {
@@ -109,6 +109,8 @@
     display: flex;
     flex-direction: row;
     height: auto;
+    justify-content: center;
+    align-content: center;
   }
   .about-me-content h2 {
     text-align: center;
@@ -117,14 +119,13 @@
     order: 1;
   }
   .about-me-picture-container {
-    order: 2;
-    width: 80%;
-    height: auto;
+    width: 100%;
+    margin-bottom: 40px;
     @include z-index(picframes);
   }
   .about-me-picture {
     background-size: cover;
-    height: 30vh;
+    height: 100%;
     width: 90%;
     border: $lighttitle 15px solid;
   }
